--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.22.0",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "handlebars": "^4.0.10",
     "handlebars-loader": "^1.6.0",
@@ -27,10 +27,10 @@
     "pug-html-loader": "^1.1.0",
     "pug-loader": "^2.3.0",
     "rimraf": "^2.6.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
-    "webpack": "^2.2.0",
+    "webpack": "^3.8.1",
     "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {}
